--- a/mod_content/basefunkin/data/songs/stress/stress-easy.json
+++ b/mod_content/basefunkin/data/songs/stress/stress-easy.json
@@ -2,7 +2,7 @@
 	"song": {
 		"player1": "bf-holding-gf",
 		"events": [],
-		"gfVersion": "pico-speaker",
+		"gfVersion": "pico-shoot-week7",
 		"notes": [
 			{
 				"sectionBeats": 4,
