--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,10 +7,10 @@
 
         {
             "name": "Debug build",
-            "preLaunchTask": "lime: build linux -debug",
+            "preLaunchTask": "lime: build windows -debug",
             "type": "hxcpp",
             "request": "launch",
-            "program": "${workspaceFolder}/export/debug/linux/bin/PsychEngine"
+            "program": "${workspaceFolder}/export/debug/windows/bin/PsychEngine"
         },
         {
             "name": "Haxe Interpreter",
